<resources>
    <string name="app_name">Just Java App</string>
    <string name="toppings">Toppings</string>
    <string name="cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="initial_quantity">2</string>
    <string name="order_summary">Order Summary</string>
    <string name="initial_price">₹10</string>
    <string name="order">Order</string>
    <string name="name_field">Name</string>
</resources>
